<resources>
    <string name="app_name">Intercom App</string>
    <string name="register">Create Account</string>
    <string name="login">Login</string>
    <string name="name">Full Name</string>
    <string name="place">Address/Apt.</string>
    <string name="delete">Delete Account</string>
    <string name="sign_in">Sign In</string>
    <string name="back">Back</string>
    <string name="pin">Pin</string>
    <string name="re_enter_pin">Re-enter pin</string>
    <string name="home">Home</string>
    <string name="phone">Phone</string>
    <string name="virtual_key">Virtual Key</string>
    <string name="account">Account</string>
    <string name="take_photo">Open Camera</string>
    <string name="save_picture">Save Picture</string>
    <string name="authentication_status">Authentication Status</string>
    <string name="face_and_finger_id">Face And Finger ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>