<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="15dp"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"/>
    <EditText
        android:id="@+id/name_login"
        android:layout_width="match_parent"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@drawable/edittextbackground"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:layout_height="50dp"/>
    <EditText
        android:id="@+id/pin_login"
        android:layout_width="match_parent"
        android:hint="@string/pin"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:background="@drawable/edittextbackground"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:hint="@string/sign_in"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/back_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/back"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>